--- a/angular.json
+++ b/angular.json
@@ -29,8 +29,8 @@
             ],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
-              "src/lemon-theme.sass",
-              "src/styles.sass"
+              "src/sass/lemon-theme.sass",
+              "src/sass/styles.sass"
             ],
             "scripts": []
           },
@@ -94,8 +94,8 @@
             ],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
-              "src/lemon-theme.sass",
-              "src/styles.sass"
+              "src/sass/lemon-theme.sass",
+              "src/sass/styles.sass"
             ],
             "scripts": []
           }
